--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*.wav
+*.idea/
 .DS_Store
-.wav
-.mp3
-models/
 .venv
-**.idea/
-.idea/*
-.idea/
+*.cfg
+bin/
+lib/
+share/
