--- a/requirements.txt
+++ b/requirements.txt
@@ -178,3 +178,20 @@ cycler~=0.12.1
 kiwisolver~=1.4.7
 noisereduce~=3.0.3
 tqdm~=4.67.1
+cffi~=1.17.1
+requests~=2.32.3
+srt~=3.5.3
+vosk~=0.3.44
+websockets~=14.2
+charset-normalizer~=3.4.1
+certifi~=2025.1.31
+urllib3~=2.3.0
+idna~=3.10
+pycparser~=2.22
+protobuf~=5.29.3
+filelock~=3.17.0
+torch~=2.6.0
+mpmath~=1.3.0
+sympy~=1.13.1
+jinja2~=3.1.5
+argostranslate~=1.9.6
