--- a/requirements.txt
+++ b/requirements.txt
@@ -195,3 +195,9 @@ mpmath~=1.3.0
 sympy~=1.13.1
 jinja2~=3.1.5
 argostranslate~=1.9.6
+certifi==2025.1.31
+cffi==1.17.1
+charset-normalizer==3.4.1
+contourpy==1.3.1
+cycler==0.12.1
+fonttools==4.56.0
